2010-05-06 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el ()
	(tinydebian-bug-browse-url-main-interactive): Add `save-excursion'.
	(tinydebian-browse-url-basic): New.
	(tinydebian-bug-browse-url-run): Use
	`tinydebian-browse-url-basic'
	(tinydebian-browse-url-http-get): New.
	(tinydebian-decode-hex): New.
	(tinydebian-debian-parse-bts-bug-subject): New.
	(tinydebian-debian-url-bug-initialize): New.
	(tinydebian-debian-parse-bts-bug-field): devel New.
	(tinydebian-debian-parse-bts-bug-date-iso): New.
	(tinydebian-debian-parse-bts-search): New.
	(tinydebian-date-to-iso8691): New.
	(tinydebian-debian-parse-bts-search-tag): New.
	(tinydebian-debian-parse-bts-bug-info): New.
	(tinydebian-debian-parse-bts-bug-p): New.
	(tinydebian-debian-url-with): New.
	(tinydebian-debian-url-bug-initialize-p): New.
	(tinydebian-debian-url-bug-info): New.
	(tinydebian-:buffer-http-get): New.
	(tinydebian-debian-bug-info-all-insert): New user
	command in mail mode 'ii'.
	(tinydebian-debian-bug-info-subject-insert): New user
	command in mail mode 'is'.
	(tinydebian-debian-bug-info-macro): New.

2010-05-02 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-call-process): Set
	`default-directory'.
	(tinydebian-:buffer-rc-alert): New.
	 (tinydebian-bts-mode): add `tinydebian-command-show-rc-alert'.

2010-04-28 Thu  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el
	- Fix byte compile errors (Emacs 23.x, XEmacs 21.4).
	(top level): add `eval-and-compile'.
	(folding-install-keymaps): Change `mapcar' to `mapc'; no list is
	collected.
	(folding-event-posn): Add missing "%s" format to `error'.
	(folding-mode-add-find-file-hook): Call `folding-find-file-hook'.
	(folding-is-hooked): Rewrite to use new hooks.
	(folding-find-file-hook): New macro
	(folding-write-file-hook): New macro.
	(folding-install-hooks): use `folding-write-file-hook'.
	(folding-font-lock-support-instantiate): simplify
	`global-font-lock-mode' check.